docs/zh/6.3.0/powered-by.md
# 由 Apache SkyWalking 强力驱动的公司/组织

本页面展示了使用 Apache SkyWalking 进行研究, 生产或提供包含 SkyWalking 的商业产品的公司/组织, 排名不分先后, **按公司/组织的字母表顺序**. 


1. 300.cn 中企动力科技股份有限公司 http://www.300.cn/
1. 4399.com 四三九九网络股份有限公司. http://www.4399.com/
1. 51mydao.com 买道传感科技（上海）有限公司 https://www.51mydao.com/
1. 5i5j. 上海我爱我家房地产经纪有限公司 https://sh.5i5j.com/about/
1. Aihuishou.com 爱回收网 http://www.aihuishou.com/
1. Alibaba Cloud, 阿里云, http://aliyun.com 
1. Anxin Insurance. 安心财产保险有限责任公司 https://www.95303.com
1. APM Star 北京天空漫步科技有限公司 http://www.apmstar.com
1. AsiaInfo Inc. http://www.asiainfo.com.cn/
1. Autohome. 汽车之家. http://www.autohome.com.cn
1. Baixing.com 百姓网 http://www.baixing.com/
1. hellobanma 斑马网络 https://www.hellobanma.com/
1. bestsign. 上上签. https://www.bestsign.cn/page/
1. Bizsaas.cn 北京商云科技发展有限公司. http://www.bizsaas.cn/
1. Cdlhyj.com 六合远教（成都）科技有限公司 http://www.cdlhyj.com
1. China Eastern Airlines 中国东方航空. http://www.ceair.com/
1. Chehejia Automotive. 北京车和家信息技术有限责任公司. https://www.chehejia.com/
1. Chinadaas. 北京中数智汇科技股份有限公司. https://www.chinadaas.com/
1. China Merchants Bank. 中国招商银行. http://www.cmbchina.com/
1. Chtwm.com. 恒天财富投资管理股份有限公司. https://www.chtwm.com/
1. Cmft.com. 招商局金融科技. https://www.cmft.com/
1. CXIST.com 上海程析智能科技有限公司 https://www.cxist.com/
1. Dangdang.com. 当当网. http://www.dangdang.com/
1. DaoCloud. https://www.daocloud.io/
1. Deyoushenghuo in WeChat app. 河南有态度信息科技有限公司，微信小程序：得有生活
1. Dianfubao.com 垫富宝 https://www.dianfubao.com/
1. Echplus.com 北京易诚互动网络技术有限公司 http://www.echplus.com/
1. Eqxiu.com. 北京中网易企秀科技有限公司 http://www.eqxiu.com/
1. GTrace System. (No company provided) 
1. Gdeng.cn 深圳谷登科技有限公司 http://www.gdeng.cn/
1. Guazi.com 瓜子二手车直卖网. https://www.guazi.com/
1. guohuaitech.com 北京国槐信息科技有限公司. http://www.guohuaitech.com/
1. Haier. 海尔消费金融 https://www.haiercash.com/
1. Haoyunhu. 上海好运虎供应链管理有限公司 http://www.haoyunhu56.com/
1. Huawei Inc. DevCloud. https://www.huaweicloud.com/devcloud/
1. Hundun YUNRONG Fintech. 杭州恒生云融网络科技有限公司 https://www.hsjry.com/
1. hunliji.com 婚礼纪 https://www.hunliji.com/
1. iFLYTEK. 科大讯飞股份有限公司-消费者BG http://www.iflytek.com/
1. lizhi.fm 荔枝FM https://www.lizhi.fm/
1. Ke.com. 贝壳找房. https://www.ke.com
1. Keking.cn 凯京集团. http://www.keking.cn
1. JoinTown. 九州通医药集团 http://www.jztey.com/
1. Lagou.com. 拉勾. https://www.lagou.com/
1. laocaibao. 上海证大爱特金融信息服务有限公司 https://www.laocaibao.com/
1. Lima 北京力码科技有限公司 https://www.zhongbaounion.com/
1. Lifesense.com 广东乐心医疗电子股份有限公司 http://www.lifesense.com/
1. Madecare. 北京美德远健科技有限公司. http://www.madecare.com/
1. Maodou.com 毛豆新车网. https://www.maodou.com/
1. Mobanker.com 上海前隆信息科技有限公司  http://www.mobanker.com/
1. Mxnavi. 沈阳美行科技有限公司 http://www.mxnavi.com/
1. Moji 墨叽（深圳）科技有限公司 https://www.mojivip.com
1. Mypharma.com 北京融贯电子商务有限公司 https://www.mypharma.com
1. Osacart in WeChat app 广州美克曼尼电子商务有限公司
1. Primeton.com 普元信息技术股份有限公司 http://www.primeton.com 
1. qiniu.com 七牛云 http://qiniu.com 
1. Qingyidai.com 轻易贷 https://www.qingyidai.com/
1. Qsdjf.com 浙江钱宝网络科技有限公司 https://www.qsdjf.com/index.html
1. Qk365.com 上海青客电子商务有限公司 https://www.qk365.com
1. Rongjinbao. 深圳融金宝互联网金融服务有限公司. http://www.rjb777.com
1. Shouqi Limousine & chauffeur Group 首约科技(北京)有限公司. https://www.01zhuanche.com/
1. shuaibaoshop.com 宁波鲸灵网络科技有限公司 http://www.shuaibaoshop.com/
1. Sijibao.com 司机宝 https://www.sijibao.com/
1. Sinolink Securities Co.,Ltd. 国金证券佣金宝 http://www.yongjinbao.com.cn/
1. Source++ https://sourceplusplus.com
1. StartDT 奇点云 https://www.startdt.com/
1. Successchannel 苏州渠成易销网络科技有限公司. http://www.successchannel.com
1. syswin.com 北京思源集团 http://www.syswin.com/
1. Tetrate.io https://www.tetrate.io/
1. Today36524.com Today便利店
1. Tools information technology co. LTD 杭州图尔兹信息技术有限公司 http://bintools.cn/
1. Tsfinance.com 重庆宜迅联供应链科技有限公司 https://www.tsfinance.com.cn/
1. tuhu.cn 途虎养车 https://www.tuhu.cn
1. Tuya. 涂鸦智能. https://www.tuya.com
1. VBill Payment Co., LTD. 随行付. https://www.vbill.cn/
1. WeBank. 微众银行 http://www.webank.com
1. Weier. 广州文尔软件科技有限公司. https://www.site0.cn
1. Wochu. 我厨买菜. https://www.wochu.cn
1. Xiaomi. 小米. https://www.mi.com/en/
1. Xinyebang.com 重庆欣业邦网络技术有限公司 http://www.xinyebang.com
1. xueqiu.com 雪球财经. https://xueqiu.com/
1. yibainetwork.com 深圳易佰网络有限公司 http://www.yibainetwork.com/
1. Yiguo. 易果生鲜. http://www.yiguo.com/
1. Yinji(shenzhen)Network Technology Co.,Ltd. 印记. http://www.yinjiyun.cn/
1. Yonghui Superstores Co., Ltd. 永辉超市 http://www.yonghui.com.cn
1. Youzan.com 杭州有赞科技有限公司 http://www.youzan.com/

# 用户

## 阿里云 (Alibaba Cloud)
追踪分析云服务支持 SkyWalking Agent 和格式.

## 中国东方航空
集成在微服务架构支持平台.

## 招商银行
在 CMBChina 商城项目中使用 SkyWalking 和 [SkyAPM .net agent](https://github.com/SkyAPM/SkyAPM-dotnet)

## ke.com
在生产环境中部署 SkyWalking.
- 三台 CentOs 机器(32 CPU, 64G 内存, 1.3T 硬盘) 作为收集服务器
- 三台 ElasticSearch(6.4.2 版本, 40 CPU, 96G 内存, 7T 硬盘) 节点作为存储

支持 60+ 实例, 每分钟超过 300k 调用, 每秒钟超过 50k Span

## Oscart
使用来自 SkyWalking 及其社区的多种语言代理, 包括 SkyWalking Javaagent 和 [SkyAPM nodejs agent](https://github.com/SkyAPM/SkyAPM-nodejs).
SkyWalking OAP 平台作为后端和可视化平台.

## Primeton
集成在 Primeton EOS PLATFORM 8 中, 一个商业化微服务平台.

## Tetrate
Tetrate 提供了商业水平的服务网格. SkyWalking 作为它的核心观测平台, 为多种商业服务网格环境提供服务.

## 七牛云
提供了一个自定义版本的 SkyWalking Agent. 可以提供分布式追踪并集成到它的智能日志管理平台.

## Source++
一个开源智能的编程助手, 旨在桥接 APM 工具和开发者 IDE 工具, 使得反馈循环更加紧凑. Source++ 使用 SkyWalking 作为基于 JVM 应用的 APM.

## lagou.com
拉勾 Lagou.com 在基于 JVM 的生产环境应用程序中使用 SkyWalking. 自定义和优化了多个收集器 collector 的功能, 如告警, SQL 指标, 循环操作指标, 线程监控, 细节模式. 支持了超过 200 个实例, 每分钟超过 4500k 的 Segments.

## 永辉超市

永辉超市使用 SkyWalking 作为主要的 APM 系统, 来监控 1 千多个实例集群, 支持了 150K+ tps/qps 的负载.
SkyWalking 每天全量收集, 分析和保存 100 亿 Segment (消耗 3T 硬盘),
SkyWalking 后端集群由 15 个 OAP 节点和 20 个 ElasticSearch 节点构成.
